Creado el proyecto entero

--- a/anuncios/resources/lang/en.json
+++ b/anuncios/resources/lang/en.json
@@ -180,5 +180,6 @@
     "You may not delete your personal team.": "You may not delete your personal team.",
     "You may not leave a team that you created.": "You may not leave a team that you created.",
     "Sign in": "Sign in",
-    "Email address": "Email address"
+    "Email address": "Email address",
+    "Bienvenido a mi proyecto Crud": "Welcome to my project Crud"
 }
