--- a/anuncios/resources/lang/es.json
+++ b/anuncios/resources/lang/es.json
@@ -182,6 +182,6 @@
     "You may not leave a team that you created.": "No se puede abandonar un equipo que usted creó.",
     "Sign in": "Registrarse",
     "Email address": "Dirección de correo electrónico",
-    "failed": "Fallo"
-
+    "failed": "Fallo",
+    "Welcome to my project Crud": "Bienvenido a mi proyecto Crud"
 }
